<resources>
    <string name="app_name">Kotlin</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="error_inter_net">error inter net</string>
    <string name="warning">تحذير</string>
    <string name="try_again">حاول مرة أخرى</string>
    <string name="cancel">إلغاء</string>
    <string name="error">خطاء</string>
    <string name="wait">انتظر</string>
    <string name="containers">CONTAINERS</string>
    <string name="login_here">تسجيل الدخول</string>
    <string name="login">تسجيل الدخول</string>
    <string name="login_text">فضلك قم بتسجيل الدخول لمتابعة  طلباتك</string>
    <string name="password">كلمة المرور</string>
    <string name="forget_password">نسيت كلمة المرور ؟</string>
    <string name="donot_have_account">لا يوجد عندك حساب؟</string>
    <string name="create_new_account">إنشاء حساب جديد</string>
    <string name="skip">تخطي</string>
    <string name="phone_number">رقم الجوال</string>
    <string name="hawayat">الحاويات</string>
    <string name="orders">طلباتي</string>
    <string name="notifications">الإشعارات</string>
    <string name="more">المزيد</string>
    <string name="invalid_phone">من فضلك أدخل رقم جوال صحيح مثال :05xxxxxxxx</string>
</resources>