<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:scrollbars="vertical"
    tools:context=".view.fragments.UserCycle.LoginFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_40sdp"
            android:scaleType="center"
            android:src="@drawable/newlogo" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="top"
            android:fontFamily="@font/almarai_bold"
            android:gravity="center_horizontal|center_vertical"

            android:lineSpacingExtra="-15sp"
            android:text="@string/containers"
            android:textColor="@color/app_color"
            android:textSize="@dimen/_16sdp" />

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_10sdp"
            android:paddingBottom="@dimen/_35sdp">

            <ImageView
                android:layout_width="@dimen/_35sdp"
                android:layout_height="@dimen/_35sdp"
                android:layout_gravity="start"
                android:layout_marginStart="@dimen/_30sdp"
                android:elevation="@dimen/_4sdp"
                android:src="@drawable/ic_box_with_icon" />

            <androidx.cardview.widget.CardView
                android:id="@+id/card_item_cardview"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/_10sdp"
                android:layout_marginTop="@dimen/_20sdp"
                android:layout_marginEnd="@dimen/_10sdp"
                android:layout_marginBottom="@dimen/_20sdp"
                android:background="@color/white"
                android:backgroundTint="@color/white"
                android:paddingBottom="@dimen/_10sdp"
                app:cardCornerRadius="@dimen/_10sdp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginStart="@dimen/_10sdp"
                    android:layout_marginTop="@dimen/_20sdp"
                    android:layout_marginEnd="@dimen/_10sdp"
                    android:orientation="vertical"
                    android:paddingBottom="@dimen/_16sdp">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/_10sdp"
                        android:gravity="right|center_vertical"
                        android:lineSpacingExtra="-12sp"
                        android:text="@string/login"
                        android:textColor="@color/back_263238"
                        android:textSize="@dimen/_15sdp" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/_4sdp"
                        android:fontFamily="@font/almarai_regular"

                        android:text="@string/login_text"
                        android:textColor="@color/hint_ABABAB"
                        android:textSize="@dimen/_11sdp" />

                    <com.google.android.material.textfield.TextInputLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/_40sdp"
                        android:imeOptions="actionNext"
                        android:textColorHint="@color/hint_ABABAB">

                        <com.google.android.material.textfield.TextInputEditText
                            android:id="@+id/fragment_login_email_edit"
                            android:layout_width="match_parent"
                            android:layout_height="@dimen/_45sdp"
                            android:background="@color/white"
                            android:drawablePadding="@dimen/_8sdp"
                            android:ems="15"
                            android:hint="@string/phone_number"
                            android:inputType="phone"
                            android:paddingBottom="@dimen/_8sdp"
                            android:textAlignment="viewStart"
                            android:textSize="@dimen/_12sdp" />

                    </com.google.android.material.textfield.TextInputLayout>

                    <LinearLayout
                        android:id="@+id/fragment_login_error1_layout"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="@dimen/_4sdp"
                        android:orientation="horizontal"
                        android:visibility="gone">

                        <TextView
                            android:id="@+id/fragment_login_error1"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:fontFamily="@font/almarai_regular"
                            android:textAlignment="viewStart"
                            android:textColor="@color/red_E55151"
                            android:textSize="@dimen/_12ssp" />
                    </LinearLayout>

                    <com.google.android.material.textfield.TextInputLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/_15sdp"
                        android:imeOptions="actionNext"
                        android:textColorHint="@color/hint_ABABAB"
                        app:passwordToggleDrawable="@drawable/toggle_selector"
                        app:passwordToggleEnabled="true"
                        app:passwordToggleTint="@color/hint_ABABAB">

                        <com.google.android.material.textfield.TextInputEditText
                            android:id="@+id/fragment_login_password_edit"

                            android:layout_width="match_parent"
                            android:layout_height="@dimen/_45sdp"
                            android:background="@color/white"
                            android:drawablePadding="@dimen/_8sdp"
                            android:ems="15"
                            android:hint="@string/password"
                            android:inputType="textPassword"
                            android:textAlignment="viewStart"

                            android:textSize="@dimen/_12sdp" />

                    </com.google.android.material.textfield.TextInputLayout>

                    <LinearLayout
                        android:id="@+id/fragment_login_error2_layout"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="@dimen/_4sdp"
                        android:orientation="horizontal"
                        android:visibility="gone">

                        <TextView
                            android:id="@+id/fragment_login_error2"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:fontFamily="@font/almarai_regular"
                            android:textAlignment="viewStart"
                            android:textColor="@color/red_E55151"
                            android:textSize="@dimen/_12ssp" />
                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_marginTop="@dimen/_20sdp"
                        android:gravity="center_vertical">

                        <TextView
                            android:id="@+id/fragment_login_forget_pass_btn"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:layout_gravity="center_vertical|center"
                            android:fontFamily="@font/almarai_regular"
                            android:gravity="center_vertical|end"
                            android:text="@string/forget_password"
                            android:textColor="@color/app_color"
                            android:textSize="@dimen/_13sdp" />
                    </LinearLayout>

                    <FrameLayout
                        android:id="@+id/fragment_login_enter_btu"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/_40sdp"
                        android:background="@drawable/gradient_btn_gray_shap"
                        android:paddingTop="@dimen/_4sdp"
                        android:paddingBottom="@dimen/_4sdp"
                        android:textAllCaps="false">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="@dimen/_30sdp"
                            android:layout_gravity="center"
                            android:fontFamily="@font/almarai_bold"
                            android:gravity="center"
                            android:padding="@dimen/_5sdp"
                            android:text="@string/login"
                            android:textColor="@color/white"
                            android:textSize="@dimen/_12ssp" />

                        <com.github.ybq.android.spinkit.SpinKitView
                            android:id="@+id/spin_kit1"
                            style="@style/SpinKitView.Circle"
                            android:layout_width="@dimen/_30sdp"
                            android:layout_height="@dimen/_30sdp"
                            android:layout_gravity="start|center_vertical"
                            android:layout_marginStart="@dimen/_10sdp"
                            android:padding="@dimen/_5sdp"
                            android:visibility="gone"
                            app:SpinKit_Color="@color/white" />

                    </FrameLayout>
                    <!--                    <Button-->
                    <!--                        android:id="@+id/fragment_login_enter_btu"-->
                    <!--                        style="@style/text_view_style_bold"-->
                    <!--                        android:layout_width="match_parent"-->
                    <!--                        android:layout_height="wrap_content"-->
                    <!--                        -->
                    <!--                        android:background="@drawable/shap_buttom_green"-->
                    <!--                        android:includeFontPadding="false"-->
                    <!--                        android:paddingTop="@dimen/_4sdp"-->
                    <!--                        android:paddingBottom="@dimen/_4sdp"-->
                    <!--                        android:text="@string/login"-->
                    <!--                        android:textAllCaps="false"-->
                    <!--                        android:textColor="@color/white"-->
                    <!--                        android:textSize="@dimen/_12ssp"-->
                    <!--                        app:backgroundTint="@null" />-->

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_marginTop="@dimen/_20sdp">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:fontFamily="@font/almarai_regular"
                            android:text="@string/donot_have_account"
                            android:textColor="#495057"
                            android:textSize="@dimen/_12ssp" />

                        <TextView
                            android:id="@+id/fragment_login_register_btn"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="@dimen/_5sdp"
                            android:fontFamily="@font/almarai_bold"
                            android:gravity="center"
                            android:text="@string/create_new_account"
                            android:textColor="@color/app_color"
                            android:textSize="@dimen/_12ssp" />

                    </LinearLayout>

                    <TextView
                        android:id="@+id/fragment_login_skip_btn"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_marginStart="@dimen/_5sdp"
                        android:layout_marginTop="@dimen/_15sdp"
                        android:fontFamily="@font/almarai_bold"
                        android:text="@string/skip"
                        android:textColor="@color/app_color"
                        android:textSize="@dimen/_13ssp"
                        android:visibility="gone"

                        />


                </LinearLayout>
            </androidx.cardview.widget.CardView>
        </FrameLayout>
    </LinearLayout>
</ScrollView>